fixed button formatting issues on mobile

--- a/angular/src/app/components/download-cluster/download-cluster.component.scss
+++ b/angular/src/app/components/download-cluster/download-cluster.component.scss
@@ -28,3 +28,9 @@ button {
         vertical-align: middle;
     }
 }
+
+@media screen and (max-width: 700px) {
+    button {
+        width: 45%;
+    }
+}
